# RenZhengPass

./: CMakeLists.txt  save.sh
include/: MessageProtocol.hpp  SocketGuard.hpp
server/: client.py
server/include/: TextCaptureServer.hpp
src/: TextCaptureServer.cpp  main.cpp
